* fix #6373 by switching the BD... macros to take the address of corresponding   constants, which had to be defined in several places in order to be available   in the kernel addons, network protocols and the server/kit. * enable -Werror for all servers

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38213 a95241bf-73f2-0310-859d-f6bbb57e9c96