src/add-ons/kernel/bluetooth/btCoreData/ConnectionInterface.h
@@ -19,7 +19,7 @@ HciConnection* ConnectionByDestination(const bdaddr_t* destination,
 	hci_id hid);
 
 
-HciConnection* AddConnection(uint16 handle, int type, bdaddr_t* dst,
+HciConnection* AddConnection(uint16 handle, int type, const bdaddr_t* dst,
 	hci_id hid);
 status_t RemoveConnection(bdaddr_t* destination, hci_id hid);
 status_t RemoveConnection(uint16 handle, hci_id hid);
